--- a/span-display.html
+++ b/span-display.html
@@ -13,6 +13,12 @@
 
       span {
         /* Prueba los valores inline, block e inline-block para la propiedad display.*/
+        /* display: inline; no cambia el estilo en que se visualiza ya que span es un elemento en línea.*/
+        /* display: block; cambia el estilo en que se visualiza a modo bloque tomando todo el ancho del contenedor.*/
+        /* display: inline-block; es un híbrido entre la visualización en línea y bloque, haciendo que el contenido 
+        tome el ancho completo del contenedor y que a su vez no ocupen todo el ancho y se coloquen uno tras otro como 
+        si de un elemento en línea se tratase.*/
+        display: inline-block;
         width: 100px;
       }
     </style>
@@ -20,18 +26,18 @@
   <body>
     <h1>Lorem ipsum</h1>
 
-    <span
-      >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
+    <span>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
       voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
       ext.
     </span>
-    <span
-      >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
+    <span>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
       voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
       ext.
     </span>
-    <span
-      >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
+    <span>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
       voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
       ext.
     </span>
