--- a/div-tabla.html
+++ b/div-tabla.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Div como tabla</title>
     <meta charset="utf-8" />
+    <style>
+      #contenedor {
+        display: table;
+        border: 1px solid black;
+      }
+      .contenidos {
+        display: table-row;
+        border: 1px solid red;
+      }
+      .secundario, 
+      .principal, 
+      .lateral {
+        display: table-cell;
+        border: 1px solid green;
+      }      
+    </style>
   </head>
   <body>
     <div id="contenedor">
